just commented something

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <p id="gmail">Gmail</p>
                 <p id="images">Images</p>
                 <img src="">
-                <div id="cubes">
+                <div id="cubes"> <!-- This is that cube thing in the top right corner, this is the only way i know how to make it light up-->
                     
                     <div id="item-1"class="black"></div>
                     <div id="item-2"class="black"></div>
